--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,8 @@ layout: default
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
+  <a href="https://twitter.com/intent/tweet?screen_name=thehaysstanford&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @thehaysstanford</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
   <article class="post-content">
     {{ content }}
   </article>
