--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,11 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+.column {
+    float: left;
+    width: 50%;
+}
+
 
 
 // Using media queries with like this:
